FIX: missing bracket

--- a/03_TransportLayer.tex
+++ b/03_TransportLayer.tex
@@ -692,7 +692,7 @@ else:
                         \begin{itemize}
                             \item Reset CWND back to $0$ is wasteful
                             \item Try to react before network gets congested
-                            \item Switch to AIMD after fast retransmit 
+                            \item Switch to AIMD after fast retransmit
                         \end{itemize}
                     \item Full code:
 \begin{verbatim}
@@ -779,12 +779,12 @@ Duplicate ACKs received:
                             \item To identify a connection
                         \end{itemize}
                     \item UDP only needs destination IP
-                    \item QUIC adds connectionID to identify a connection 
+                    \item QUIC adds connectionID to identify a connection
                         \begin{itemize}
                             \item Initialized randomly at handshake
                         \end{itemize}
                 \end{itemize}
-            \ides{Evolve TCP
+            \ides{Evolve TCP}
                 \begin{itemize}
                     \item Not really possible
                     \item Dropping certain package attributes looks suspicious and get dropped
