NEW: Section about algorithms
First part only

--- a/main.tex
+++ b/main.tex
@@ -17,5 +17,6 @@
     \include{./01_Introduction.tex}
     \include{./02_ApplicationLayer.tex}
     \include{./03_TransportLayer.tex}
+    \include{./04_Algorithms.tex}
 
 \end{document}
