--- a/main.tex
+++ b/main.tex
@@ -16,5 +16,6 @@
 
     \include{./01_Introduction.tex}
     \include{./02_RelationalModel.tex}
+    \include{./03_RelationalAlgebra.tex}
 
 \end{document}
