NEW: SQL section

--- a/main.tex
+++ b/main.tex
@@ -17,5 +17,6 @@
     \include{./01_Introduction.tex}
     \include{./02_RelationalModel.tex}
     \include{./03_RelationalAlgebra.tex}
+    \include{./05_Sql.tex}
 
 \end{document}
