--- a/03_RelationalAlgebra.tex
+++ b/03_RelationalAlgebra.tex
@@ -57,7 +57,7 @@
                     \item Other flavours
                         \begin{itemize}
                             \ides{Left Outer Join:} Natural join $\bigcup$ unmatched tuples from left operand
-                            \ides{Right Outer Join:} Natural join $\bidcup$ unmatched tuples from right operand
+                            \ides{Right Outer Join:} Natural join $\bigcup$ unmatched tuples from right operand
                             \ides{Full Outer Join:} Natural join $\bigcup$ unmatched tuples from left and right operand
                             \ides{Left Semi Join:} Tuples from left operand which match with any tuples from right operand
                                 \begin{itemize}
